# Anyone_OS

./: CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md
apps/: CMakeLists.txt  init.c
apps/camera/: camera_app.c
apps/gallery/: gallery_app.c
apps/phone/: phone_app.c
apps/settings/: settings_app.c
apps/sms/: sms_app.c
drivers/touch/: README.md
kernel/: README.md
kernel/config/: lv_conf.h
phone os/: lockscreen.py  main.py
phone os/apps/: __init__.py  alarm_app.py  app_store_app.py  base_app.py  battery_app.py  browser_app.py  calculator_app.py  calendar_app.py  camera_app.py  clock_app.py  files_app.py  gallery_app.py  messages_app.py  music_app.py  phone_app.py  settings_app.py  storage_app.py  weather_app.py
phone os/screens/: __init__.py  home_screen.py  lock_screen.py
phone os/settings/: settings.json
services/: CMakeLists.txt
services/appmgr/: CMakeLists.txt  app_manager.c
services/notification/: CMakeLists.txt  notification_service.c
system/buildroot/: build.sh  phoneos_zero2w_defconfig
system/framework/: CMakeLists.txt.bak
system/framework/include/phoneos/: app.h  app_manager.h  app_registry.h  notification.h
system/framework/src/: app_registry.c
system/wsl/: build.sh  run.sh
ui/launcher/: CMakeLists.txt  CMakeLists.txt.bak
ui/launcher/include/: home_screen.h  launcher.h  platform.h  status_bar.h
ui/launcher/src/: home_screen.c  launcher.c  main.c  platform_fbdev.c  platform_wsl.c  status_bar.c
